[package]
name = "game-of-life"
version = "0.1.0"
authors = ["beurre <zidronfirefax@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.19"
ctrlc = { version = "3.0", features = ["termination"] }
rand = "0.8.3"
num_cpus = "1.13.0"